[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"

smoke-test = { path = "../smoke-test" }
prime-time = { path = "../prime-time" }
means-to-an-end = { path = "../means-to-an-end" }
budget-chat = { path = "../budget-chat" }
